# midi-portmidi

./: LICENSE  midi-portmidi.cabal  stack.yaml
app/: Main.hs
src/Sound/MIDI/: PortMidi.hs
